# snakypy-helpers

./: .editorconfig  .flake8  .gitignore  .imake  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: pythonpackage.yml  tests.yml
dev/: make
docs/: conf.py  helpers.rst  index.rst  installation.rst  modules.rst
run/: make
snakypy/helpers/: __init__.py  __main__.py
snakypy/helpers/ansi/: __init__.py
snakypy/helpers/calcs/: __init__.py  bmi.py  math.py
snakypy/helpers/catches/: __init__.py  finders.py  generic.py  several.py
snakypy/helpers/checking/: __init__.py  generic.py
snakypy/helpers/console/: __init__.py  display.py  screen.py  utils.py
snakypy/helpers/decorators/: __init__.py
snakypy/helpers/files/: __init__.py  generic.py  json.py
snakypy/helpers/logging/: __init__.py
snakypy/helpers/os/: __init__.py  destroyers.py  modifiers.py  process.py  removals.py
snakypy/helpers/path/: __init__.py  create.py
snakypy/helpers/subprocess/: __init__.py
snakypy/helpers/utils/: decorators.py
tests/: __init__.py  test_snakypy_helpers.py
