[tool.poetry]
name = "snakypy-helpers"
version = "0.2.1"
description = "Snakypy Helpers is a package that contains code ready to assist in the development of packages/applications so as not to replicate the code."
authors = ["William C. Canin <william.costa.canin@gmail.com>"]
readme = "README.rst"
license = "MIT license"
keywords=["snakypy", "helpers", "linux"]
homepage = "https://github.com/snakypy/snakypy-helpers"
repository = "https://github.com/snakypy/snakypy-helpers"
include = ["LICENSE"]

packages = [
    {include = "snakypy"},
]

[tool.poetry.dependencies]
python = "^3.9"
pyfiglet = "0.8.post1"

[tool.poetry.dev-dependencies]
twine = "^3.4.1"
wheel = "^0.34.2"
flake8 = "^3.9.2"
tox = "^3.23.1"
black = "^21.5b1"
sphinx = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
recommonmark = "^0.7.1"
pytest = "^6.2.4"
pytest-runner = "^5.3.1"
ipython = "^7.24.0"
mypy = "^0.812"
tomlkit = "^0.7.0"
imake = "^0.1.2"
isort = "^5.8.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | build
    | venv
    | dist
    | docs
    | tmp
  )/
)
'''


[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["snakypy", "tests"]
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
minversion = "6.0"
cache_dir = "/tmp/.pytest_cache"
# addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
